--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -1,6 +1,5 @@
+#login_error #{flash[:login_error] if flash[:login_error]}
 -form_tag session_path, :id => 'new_session' do
-  #login_error
-    =flash[:login_error] if flash[:login_error]
   =text_field_tag :username
   =password_field_tag :password
   =submit_tag "login"
