--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -31,6 +31,7 @@
         $("#items").append(data);
         $("#items .item:last").dblclick(editItem);
         new_item_body.val('');
+        $(".item_complete").change(markComplete);
       });
     });
     
@@ -86,7 +87,7 @@
       nameField.blur(updateList);
     });
     
-    $(".item_complete").change(function(e) {
+    function markComplete(e) {
       var item = $(this).parents(".item:first"),
           url = "/lists/#{@list.id}/items/" + item.attr("id") + ".js",
           data = {'_method':'put', 'item':{'complete':false}};
@@ -98,5 +99,7 @@
         data.item.complete = true;
       }
       $.post(url, data);
-    });
+    }
+    
+    $(".item_complete").change(markComplete);
   });
