--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -8,7 +8,7 @@
         .name(style="display:inline")
           =link_to h(list.name), list_path(list)
           .items_count
-            #{pluralize(list.items.size, "item")}
+            #{pluralize(list.active_items_count, "item")}
         =link_to 'x', list_path(list), :method => :delete, :confirm => "Delete this list?", :class => 'delete button'
         
 :javascript
